@@ -6,6 +6,8 @@
     new panel config memory #372
     fix build problem on gtk < 2.24 #368
     new root window use HOME=/root incase no env reset
+    fix Export from desktop menu
+    man panel memory
 0.9.0   2013-10-22:
     add browse-for options in Rename/New dialog Browse dialog
     run fm Devices menu functions in task man
